[tool.poetry]
name = "streamlit_openai_cost_estimator"
version = "0.1.0"
description = ""
authors = ["Markus Odenthal"]
readme = "README.md"
packages = [{include = "streamlit_openai_cost_estimator"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openai = "^0.27.8"
tiktoken = "^0.4.0"
streamlit = "^1.23.1"
langchain = "^0.0.230"
pypdf = "^3.12.2"

[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = {version = "^23.1a1", allow-prereleases = true}
flake8 = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
